--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/vercel": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-highlight": "^5.0.2",
     "remix": "^1.3.4"
   },
   "devDependencies": {
