--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "postinstall": "remix setup node"
+    "build": "run-s build:*",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev": "run-p dev:*",
+    "dev:css": "npm run generate:css -- --watch",
+    "dev:remix": "remix dev",
+    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "postinstall": "remix setup node",
+    "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/react": "^1.3.4",
@@ -21,9 +27,13 @@
     "@remix-run/dev": "^1.3.4",
     "@remix-run/eslint-config": "^1.3.4",
     "@remix-run/serve": "^1.3.4",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   },
   "engines": {
